Create object literal

--- a/objects/index.html
+++ b/objects/index.html
@@ -9,6 +9,19 @@
 <body>
     <pre>
         <code>
+            const theHobbit = {
+                title: 'The Hobbit',
+                author: 'Token',
+                pages: 420,
+                read: false
+            }
+        </code>
+    </pre>
+    <br>
+    <p>This is the quick and dirty way to instantiate an object. This is an object literal and all the data inside is mapped to property:value pairs. Each property:value pair is separated by a comma. This is the same format used in JSON, a hugely popular method of storing data files.</p>
+    <br>
+    <pre>
+        <code>
             function Book(title, author, pages, read) {
                 this.title = title
                 this.author = author
